[gd_scene load_steps=9 format=2]

[ext_resource path="res://System/BattleEntity/BattleEntity.gd" type="Script" id=1]
[ext_resource path="res://Texture/BattleEntity/SlimeMove.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BattleEntity" type="Node2D"]
script = ExtResource( 1 )

[node name="gene_pivot" type="Node2D" parent="."]

[node name="area2d" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2d"]
shape = SubResource( 6 )

[node name="sprite" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="sprite"]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="weapon_pivot" type="Node2D" parent="."]

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = -16.0
margin_top = 24.0
margin_right = 32.0
margin_bottom = 48.0
